--- a/templates/admin/views/posts/forms_posts.html.twig
+++ b/templates/admin/views/posts/forms_posts.html.twig
@@ -16,7 +16,7 @@
     </nav>
     <div class="card border-1 shadow-sm">
         <div class="card-body">
-<form action="{% if categories.id %}{{ url('admin/posts/edit/'~post.id) }}{% else %} {{ url('admin/posts/register') }}{% endif %}" method="post">
+<form action="{% if post.id %}{{ url('admin/posts/edit/'~post.id) }}{% else %} {{ url('admin/posts/register') }}{% endif %}" method="post">
                 <div class="mb-3">
                     <label for="titulo" class="form-label">
                         Título             
