--- a/templates/admin/views/login.html.twig
+++ b/templates/admin/views/login.html.twig
@@ -16,7 +16,7 @@
                         <label for="email">E-mail</label>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="password" name="senha" id="senha" class="form-control"  placeholder="Senha">
+                        <input type="password" name="password" id="password" class="form-control"  placeholder="Senha">
                         <label for="password">Senha</label>
                     </div>
 
